Closed
Bug 465752
Opened 17 years ago
Closed 17 years ago
[FIX]###!!! ASSERTION: Sheet URI does not match passed URI: 'NS_SUCCEEDED(aSheetURI->Equals(uri, &equal)) && equal'
Categories
(Core :: CSS Parsing and Computation, defect)
Core
CSS Parsing and Computation
Tracking
()
VERIFIED
FIXED
People
(Reporter: neil, Assigned: bzbarsky)
References
Details
(Keywords: verified1.9.1)
Attachments
(1 file, 1 obsolete file)
|
4.31 KB,
patch
|
dcamp
:
review+
jst
:
superreview+
mconnor
:
approval1.9.1b2+
|
Details | Diff | Splinter Review |
Calling document.write("<head><style></style></head><body></body>") causes a stylesheet to be created for the inline style. This stylesheet has a URI of javascript:'' and after the stylesheet is parsed the sheet's URI pointer compares equal to the passed URI, but the Equals method returns false.
| Assignee | ||
Comment 1•17 years ago
|
||
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #348991 -
Flags: superreview?(jst)
Attachment #348991 -
Flags: review?(dcamp)
| Assignee | ||
Comment 2•17 years ago
|
||
This is a regression from bug 445004. The Equals was passing nsJSURI to nsSimpleURI::Equals.... Fix is trivial; most of the patch is some tests to exercise this backwards and forwards (literally). Would be good to get this in for b2 as well, I guess. :(
Blocks: 445004
Flags: blocking1.9.1?
Summary: ###!!! ASSERTION: Sheet URI does not match passed URI: 'NS_SUCCEEDED(aSheetURI->Equals(uri, &equal)) && equal' → [FIX]###!!! ASSERTION: Sheet URI does not match passed URI: 'NS_SUCCEEDED(aSheetURI->Equals(uri, &equal)) && equal'
| Assignee | ||
Comment 3•17 years ago
|
||
Attachment #348991 -
Attachment is obsolete: true
Attachment #348992 -
Flags: superreview?(jst)
Attachment #348992 -
Flags: review?(dcamp)
Attachment #348991 -
Flags: superreview?(jst)
Attachment #348991 -
Flags: review?(dcamp)
Updated•17 years ago
|
Attachment #348992 -
Flags: review?(dcamp) → review+
Updated•17 years ago
|
Attachment #348992 -
Flags: superreview?(jst) → superreview+
| Assignee | ||
Comment 4•17 years ago
|
||
Comment on attachment 348992 [details] [diff] [review]
The actual fix
If we still can, we should take this for b2. Fixes a bug that bug 445004 introduced, and this fix is really safe.
Attachment #348992 -
Flags: approval1.9.1b2?
Updated•17 years ago
|
Attachment #348992 -
Flags: approval1.9.1b2? → approval1.9.1b2+
| Assignee | ||
Comment 5•17 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Comment 6•17 years ago
|
||
Comment on attachment 348992 [details] [diff] [review]
The actual fix
[snip]
>+ * The Initial Developer of the Original Code is
>+ * Boris Zbarskt <bzbarsky@mit.edu>.
I imagine that should be Zbarsky? ;)
| Assignee | ||
Comment 7•17 years ago
|
||
er, yes. ;)
Flags: blocking1.9.1? → blocking1.9.1+
Keywords: fixed1.9.1
Comment 8•16 years ago
|
||
I'm not sure what's going on, but I'm receiving the following assertion running an in-line script via the location bar of the JS code written in the reporter's details:
###!!! ASSERTION: Wrong scope, this is really bad!: 'JS_GetGlobalForObject(cx, obj) == newScope', file /Users/adesai/debug/shiretoko/mozilla-central/content/base/src/nsDocument.cpp, line 3566
...when running the following build Id for trunk:
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090706 Minefield/3.6a1pre ID:20090706143743
but verified FIXED on debug build via Shiretoko:
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1.1pre) Gecko/20090706 Shiretoko/3.5.1pre ID:20090706143721
Comment 9•16 years ago
|
||
After a conversation with Jesse, bug 502730 was created with a reduced testcase. For this bug though, marking as verified FIXED on trunk.
Status: RESOLVED → VERIFIED
Keywords: fixed1.9.1 → verified1.9.1
You need to log in
before you can comment on or make changes to this bug.
Description
•