Bug 465752.  Fix Equals() to work right on javascript: URIs.  r=dcamp, sr=jst, a=mconnor